--- a/stack.yaml
+++ b/stack.yaml
@@ -37,9 +37,11 @@ resolver: lts-7.3
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - '.'
+- '../../libs/normaldistribution'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
+# - normaldistribution-1.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
