--- a/tsne.cabal
+++ b/tsne.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Data.Algorithm.TSNE
   build-depends:       base >= 4.7 && < 5,
                        mtl,
+                       data-default,
                        normaldistribution
   default-language:    Haskell2010
 
