--- a/tsne.cabal
+++ b/tsne.cabal
@@ -26,8 +26,10 @@ test-suite tSNE-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
-   build-depends:       base
-                      , tsne
+   other-modules:       Data.Algorithm.TSNESpec
+   build-depends:       base,
+                        hspec,
+                        tsne
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
 
