some utils tests

--- a/tsne.cabal
+++ b/tsne.cabal
@@ -29,9 +29,11 @@ test-suite tSNE-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
-   other-modules:       Data.Algorithm.TSNESpec
+   other-modules:       Data.Algorithm.TSNESpec,
+                        Data.Algorithm.TSNE.UtilsSpec
    build-depends:       base,
                         hspec,
+                        data-default,
                         tsne
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
