--- a/tsne.cabal
+++ b/tsne.cabal
@@ -41,6 +41,13 @@ test-suite tSNE-test
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
 
+executable haskell_tsne_example
+   hs-source-dirs:     example
+   main-is:            Main.hs
+   build-depends:      base,
+                       data-default,
+                       tsne
+
 source-repository head
   type:     mercurial
   location: https://bitbucket.org/robagar/haskell-tsne
