--- a/tsne.cabal
+++ b/tsne.cabal
@@ -25,6 +25,7 @@ library
                        data-default,
                        normaldistribution
   default-language:    Haskell2010
+  ghc-options:         -O2
 
 test-suite tSNE-test
    type:                exitcode-stdio-1.0
@@ -38,7 +39,10 @@ test-suite tSNE-test
                         hspec,
                         data-default,
                         tsne
-   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+   ghc-options:         -O2
+                        -threaded 
+                        -rtsopts 
+                        -with-rtsopts=-N
    default-language:    Haskell2010
 
 executable haskell_tsne_example
@@ -47,6 +51,8 @@ executable haskell_tsne_example
    build-depends:      base,
                        data-default,
                        tsne
+   ghc-options:        -O2
+                       -threaded
 
 source-repository head
   type:     mercurial
