--- a/tsne.cabal
+++ b/tsne.cabal
@@ -1,16 +1,15 @@
 name:                tsne
-version:             0.1.0.1
-synopsis:            Initial project template from stack
+version:             1.0.0
+synopsis:            Pure Haskell implementation of the t-SNE dimension reduction algorithm.
 description:         Please see README.md
 homepage:            https://bitbucket.org/robagar/haskell-tsne
 license:             LGPL
 license-file:        LICENSE
 author:              Rob Agar
 maintainer:          robagar@fastmail.net
-copyright:           2016 Rob Agar
-category:            Web
+copyright:           2017 Rob Agar
+category:            Algorithms
 build-type:          Simple
--- extra-source-files:
 cabal-version:       >=1.10
 
 library
@@ -47,15 +46,15 @@ test-suite tSNE-test
   default-language:    Haskell2010
 
 executable haskell_tsne_example
-   hs-source-dirs:      example
-   main-is:             Main.hs
-   build-depends:       base,
-                        data-default,
-                        pipes,
-                        tsne
-   ghc-options:         -O2
-                        -threaded
-   default-language:    Haskell2010
+  hs-source-dirs:      example
+  main-is:             Main.hs
+  build-depends:       base,
+                       data-default,
+                       pipes,
+                       tsne
+  ghc-options:         -O2
+                       -threaded
+  default-language:    Haskell2010
 
 source-repository head
   type:     mercurial
