--- a/tsne.cabal
+++ b/tsne.cabal
@@ -1,7 +1,7 @@
 name:                tsne
-version:             1.0.0
-synopsis:            Pure Haskell implementation of the t-SNE dimension reduction algorithm.
-description:         Please see README.md
+version:             1.0.0.0
+synopsis:            t-SNE
+description:         Pure Haskell implementation of the t-SNE dimension reduction algorithm.
 homepage:            https://bitbucket.org/robagar/haskell-tsne
 license:             LGPL
 license-file:        LICENSE
@@ -25,7 +25,6 @@ library
                        normaldistribution,
                        pipes
   default-language:    Haskell2010
-  ghc-options:         -O2
 
 test-suite tSNE-test
   type:                exitcode-stdio-1.0
@@ -39,8 +38,7 @@ test-suite tSNE-test
                        hspec,
                        data-default,
                        tsne
-  ghc-options:         -O2
-                       -threaded 
+  ghc-options:         -threaded 
                        -rtsopts 
                        -with-rtsopts=-N
   default-language:    Haskell2010
@@ -52,8 +50,7 @@ executable haskell_tsne_example
                        data-default,
                        pipes,
                        tsne
-  ghc-options:         -O2
-                       -threaded
+  ghc-options:         -threaded
   default-language:    Haskell2010
 
 source-repository head
