--- a/tsne.cabal
+++ b/tsne.cabal
@@ -1,5 +1,5 @@
 name:                tsne
-version:             1.1.0
+version:             1.2.0
 synopsis:            t-SNE
 description:         Pure Haskell implementation of the t-SNE dimension reduction algorithm.
 homepage:            https://bitbucket.org/robagar/haskell-tsne
@@ -49,6 +49,17 @@ executable haskell_tsne_example
   build-depends:       base,
                        data-default,
                        pipes,
+                       tsne
+  ghc-options:         -threaded
+  default-language:    Haskell2010
+
+executable haskell_tsne_timing
+  hs-source-dirs:      timing
+  main-is:             Main.hs
+  build-depends:       base,
+                       data-default,
+                       pipes,
+                       time,
                        tsne
   ghc-options:         -threaded
   default-language:    Haskell2010
