--- a/tsne.cabal
+++ b/tsne.cabal
@@ -1,5 +1,5 @@
 name:                tsne
-version:             1.2.0
+version:             1.3.0
 synopsis:            t-SNE
 description:         Pure Haskell implementation of the t-SNE dimension reduction algorithm.
 homepage:            https://bitbucket.org/robagar/haskell-tsne
@@ -34,9 +34,14 @@ test-suite tSNE-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       Data.Algorithm.TSNESpec,
---                       Data.Algorithm.TSNE.InternalsSpec,
+                       Data.Algorithm.TSNE.PreparationSpec,
+                       Data.Algorithm.TSNE.SteppingSpec,
                        Data.Algorithm.TSNE.UtilsSpec,
-                       Data.Algorithm.TSNE.ChecksSpec
+                       Data.Algorithm.TSNE.ChecksSpec,
+                       Data.Algorithm.TSNE.Run3DSpec,
+                       Data.Algorithm.TSNE.Run2DSpec,
+                       Data.Algorithm.TSNE.TestInput,
+                       Data.Algorithm.TSNE.TestMisc
   build-depends:       base,
                        hspec,
                        data-default,
