--- a/tsne.cabal
+++ b/tsne.cabal
@@ -1,5 +1,5 @@
 name:                tsne
-version:             1.3.0
+version:             2.0.0
 synopsis:            t-SNE
 description:         Pure Haskell implementation of the t-SNE dimension reduction algorithm.
 homepage:            https://bitbucket.org/robagar/haskell-tsne
@@ -26,6 +26,7 @@ library
                        data-default,
                        deepseq,
                        normaldistribution,
+                       repa,
                        pipes
   default-language:    Haskell2010
 
