--- a/tsne.cabal
+++ b/tsne.cabal
@@ -27,6 +27,7 @@ library
                        deepseq,
                        normaldistribution,
                        repa,
+                       vector,
                        pipes
   default-language:    Haskell2010
 
